@@ -174,6 +174,7 @@ export(ellpts)
 export(ellptsc)
 export(elltan)
 export(elltanc)
+export(esac)
 export(expandModelData)
 export(f2L)
 export(f2R)
