@@ -26,3 +26,24 @@ for each element. This attribute can be extracted with the .name function.
 to conflict with functions that use such an attribute or that
 rely on 'is.vector'.
 }
+\examples{
+\dontrun{
+# A common application occurs in manipulating lists of data frames
+# (such as might have been read in as a list of similarly
+# structured Excel sheets, each for a different year) 
+# where the name of the data frame needs to be added as a variable
+# to each data frame before merging or 'rbind'ing the data frames.
+
+dlist <- list(
+    "2019" = data.frame(x=1:3, y = 1:3 ),
+    "2020" = data.frame(x=11:13, y = 11:13 )
+)
+dlist <- napply( dlist,
+   function(d) {
+      d$year <- as.numeric(.name(d))
+      d
+   })
+dmerged <- do.call(rbind, dlist)    
+dmerged
+}
+}
